--- a/services.html
+++ b/services.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Services | Wrenley Built Stonemasonry & Pavers in Bend, OR</title>
-  <meta name="description" content="Explore Wrenley Built services—stonemasonry, paver patios, and walkways built for Bend, Oregon winters.">
+  <title>Services | 541 Hardscaping Stonemasonry & Pavers in Bend, OR</title>
+  <meta name="description" content="Explore 541 Hardscaping services—stonemasonry, paver patios, and walkways built for Bend, Oregon winters.">
   <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/layout.css">
   <link rel="stylesheet" href="assets/css/components.css">
-  <meta property="og:title" content="Services | Wrenley Built">
+  <meta property="og:title" content="Services | 541 Hardscaping">
   <meta property="og:description" content="Retaining walls, paver patios, and walkways engineered for Bend, Oregon.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://your-username.github.io/wrenley/services.html">
@@ -22,10 +22,10 @@
   {
    "@context": "https://schema.org",
     "@type": "MasonryContractor",
-    "name": "Wrenley Built",
+    "name": "541 Hardscaping",
     "url": "https://your-username.github.io/wrenley/",
     "image": "https://your-username.github.io/wrenley/assets/img/projects/2.6.jpeg",
-    "telephone": "+1-541-555-0130",
+    "telephone": "+1-541-419-0092",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "123 Mockingbird Ln",
@@ -42,7 +42,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="Wrenley Built"></a>
+      <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="541 Hardscaping"></a>
       <button class="mobile-toggle" type="button" aria-label="Toggle menu" aria-expanded="false">☰</button>
       <nav aria-label="Primary">
         <a href="index.html">Home</a>
@@ -53,32 +53,21 @@
     </div>
   </header>
   <main>
-    <section class="hero hero--split hero--services" data-hero-rotator data-parallax>
+    <section class="hero hero--split hero--services">
       <div class="container">
         <div class="hero__copy">
-          <span class="badge">Services</span>
+          <span class="badge badge--on-hero">Services</span>
           <h1>Stonework engineered for Bend's winters</h1>
-          <p class="hero__intro">From retaining walls to walkways, every Wrenley project is built on geotextile, compaction, and drainage tuned for Central Oregon's freeze/thaw cycle.</p>
+          <p class="hero__intro">From retaining walls to walkways, every 541 Hardscaping project is built on compaction, drainage, and edge restraint tuned for Central Oregon's freeze/thaw cycle.</p>
           <div class="hero__actions">
             <a class="btn btn-primary" href="projects.html">View recent installs</a>
             <a class="hero__link" href="contact.html#quote">Schedule a consult</a>
           </div>
           <ul class="hero__points">
-            <li>Owner-operated crew on every job</li>
-            <li>Detailed estimates and maintenance plans</li>
-            <li>Five-year workmanship guarantee</li>
+            <li>Subgrade evaluation, compaction, and drainage mapped before we dig</li>
+            <li>Open-graded bases and edge restraints sized for plows and freeze/thaw</li>
+            <li>Detailed site handoff with care tips after every build</li>
           </ul>
-        </div>
-        <div class="hero__gallery">
-          <figure class="hero__slide is-active" data-hero-slide>
-            <img src="assets/img/projects/2.3.jpeg" alt="Stone wall and steps with integrated lighting">
-          </figure>
-          <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway with snow-ready joints">
-          </figure>
-          <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway through landscaping">
-          </figure>
         </div>
       </div>
     </section>
@@ -92,23 +81,23 @@
             <img src="assets/img/projects/2.4.jpeg" alt="Retaining wall with outdoor lighting">
           </div>
           <strong>Stonemasonry</strong>
-          <p>Retaining walls, seat walls, fire features, and veneers hand-set on reinforced bases with drainage and geogrid.</p>
+          <p>Retaining walls, steps, and fire features hand-set on reinforced bases with drainage and compacted backfill.</p>
           <ul class="list-check">
             <li>Basalt, granite, and natural stone sourced locally</li>
-            <li>Geogrid and drain tile engineered for slopes</li>
+            <li>Drain tile, clean gravel backfill, and weep zones for slopes</li>
             <li>Lighting, caps, and finish work for year-round use</li>
           </ul>
         </article>
         <article class="feature-card" id="pavers">
           <div class="feature-card__media">
-            <img src="assets/img/projects/1.2.jpeg" alt="Crew installing paver base">
+            <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway with clean borders">
           </div>
           <strong>Paver patios &amp; driveways</strong>
           <p>Patios, pool decks, and driveways installed with open-graded base, polymeric sand, and snow-ready edge restraint.</p>
           <ul class="list-check">
             <li>Permeable and traditional options</li>
-            <li>Three-stage compaction with geotextile</li>
-            <li>Sealing and maintenance guides included</li>
+            <li>Three-stage compaction and soldier borders</li>
+            <li>Drainage planning and snow-load ready joints</li>
           </ul>
         </article>
         <article class="feature-card" id="walkways">
@@ -150,7 +139,7 @@
         <div class="process-step">
           <span>01</span>
           <h3>Site consult</h3>
-          <p>We walk the property, assess grade, and map drainage so prep meets Bend's weather demands.</p>
+          <p>We walk the property, measure grade, and flag utilities so excavation and drainage match your site.</p>
         </div>
         <div class="process-step">
           <span>02</span>
@@ -160,12 +149,12 @@
         <div class="process-step">
           <span>03</span>
           <h3>Build &amp; finish</h3>
-          <p>On-site crew handles excavation through finishing touches with daily communication.</p>
+          <p>Owner-operated crew handles excavation, slope checks, and finishing with daily communication.</p>
         </div>
         <div class="process-step">
           <span>04</span>
           <h3>Care &amp; maintenance</h3>
-          <p>We deliver cleaning tips, snow guidance, and optional seasonal servicing to keep everything dialed.</p>
+          <p>We share snow and cleaning guidance and show you how to protect the work after we leave.</p>
         </div>
       </div>
     </section>
@@ -179,13 +168,13 @@
   <footer>
     <div class="container footer-grid">
       <div>
-        <img src="assets/img/logo-placeholder.svg" alt="Wrenley Built" width="180" height="46" loading="lazy">
-        <p>Stonework that endures. Wrenley Built crafts long-lasting stonemasonry, paver patios, and walkways across Bend, Oregon.</p>
+        <img src="assets/img/logo-placeholder.svg" alt="541 Hardscaping" width="180" height="46" loading="lazy">
+        <p>Stonework that endures. 541 Hardscaping crafts long-lasting stonemasonry, paver patios, and walkways across Bend, Oregon.</p>
       </div>
       <div>
         <h3>Visit</h3>
         <p>123 Mockingbird Ln<br>Bend, OR 97701</p>
-        <p><a href="tel:+15415550130">(541) 555-0130</a><br><a href="mailto:hello@wrenleybuilt.com">hello@wrenleybuilt.com</a></p>
+        <p><a href="tel:+15414190092">(541) 419-0092</a><br><a href="mailto:541hardscaping@gmail.com">541hardscaping@gmail.com</a></p>
       </div>
       <div>
         <h3>Quick links</h3>
