--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact Wrenley Built | Bend, OR Masonry & Pavers</title>
-  <meta name="description" content="Request a quote from Wrenley Built for stonemasonry, paver patios, and walkways in Bend, Oregon.">
+  <title>Contact 541 Hardscaping | Bend, OR Masonry & Pavers</title>
+  <meta name="description" content="Request a quote from 541 Hardscaping for stonemasonry, paver patios, and walkways in Bend, Oregon.">
   <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/layout.css">
   <link rel="stylesheet" href="assets/css/components.css">
-  <meta property="og:title" content="Contact Wrenley Built">
+  <meta property="og:title" content="Contact 541 Hardscaping">
   <meta property="og:description" content="Schedule a consultation for stonework, pavers, and walkways in Bend, OR.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://your-username.github.io/wrenley/contact.html">
@@ -22,10 +22,10 @@
   {
       "@context": "https://schema.org",
     "@type": "MasonryContractor",
-    "name": "Wrenley Built",
+    "name": "541 Hardscaping",
     "url": "https://your-username.github.io/wrenley/",
     "image": "https://your-username.github.io/wrenley/assets/img/projects/1.2.jpeg",
-    "telephone": "+1-541-555-0130",
+    "telephone": "+1-541-419-0092",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "123 Mockingbird Ln",
@@ -42,7 +42,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="Wrenley Built"></a>
+      <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="541 Hardscaping"></a>
       <button class="mobile-toggle" type="button" aria-label="Toggle menu" aria-expanded="false">☰</button>
       <nav aria-label="Primary">
         <a href="index.html">Home</a>
@@ -53,68 +53,16 @@
     </div>
   </header>
   <main>
-    <section class="hero hero--split hero--contact" id="quote">
-      <div class="container">
-        <div class="hero__copy">
-          <span class="badge">Let's build</span>
-          <h1>Share your project vision</h1>
-          <p class="hero__intro">Tell us about your site, timelines, and materials. We'll schedule a consult and outline a build plan tailored to Bend's climate.</p>
-          <ul class="hero__points">
-            <li>Serving Bend, Redmond, Sisters, Sunriver, and Tumalo</li>
-            <li>Owner on-site for consultations and install</li>
-            <li>Five-year workmanship guarantee</li>
-          </ul>
-        </div>
-        <div class="section--panel section--panel--compact">
-          <form action="https://formspree.io/f/your-id" method="POST" class="reveal">
-            <label>Full Name
-              <input name="name" required>
-            </label>
-            <label>Email
-              <input type="email" name="email" required>
-            </label>
-            <label>Phone
-              <input name="phone" required>
-            </label>
-            <label>Preferred Contact Method
-              <select name="contact-method">
-                <option>Email</option>
-                <option>Phone</option>
-                <option>Text</option>
-              </select>
-            </label>
-            <label>Service
-              <select name="service">
-                <option>Stonemasonry</option>
-                <option>Pavers</option>
-                <option>Walkways</option>
-                <option>Retaining Walls</option>
-              </select>
-            </label>
-            <label>Project Details
-              <textarea name="details" rows="5" placeholder="Dimensions, material preferences, project timeline"></textarea>
-            </label>
-            <button class="btn btn-primary" type="submit">Request Quote</button>
-          </form>
-        </div>
-      </div>
-    </section>
-
     <section class="section section--accent reveal" id="about">
-      <h2>About Wrenley Built</h2>
-      <p>We founded Wrenley Built to raise the bar for stonework in Bend—attentive to drainage, freeze/thaw movement, and clean job sites. Owner-operated, we stay on the tools and communicate every phase.</p>
+      <p>541 Hardscaping raises the bar for stonework in Bend—attentive to drainage, freeze/thaw movement, and clean job sites. Owner-operated, we stay on the tools and communicate every phase.</p>
       <div class="feature-grid">
         <article class="feature-card">
           <strong>Service area</strong>
           <p>Bend, Redmond, Sisters, Sunriver, Tumalo, and surrounding Central Oregon communities.</p>
         </article>
         <article class="feature-card">
-          <strong>Hours</strong>
-          <p>Monday–Friday, 8am–5pm. Weekend consultations available by appointment.</p>
-        </article>
-        <article class="feature-card">
           <strong>Contact</strong>
-          <p><a href="tel:+15415550130">(541) 555-0130</a><br><a href="mailto:hello@wrenleybuilt.com">hello@wrenleybuilt.com</a></p>
+          <p><a href="tel:+15414190092">(541) 419-0092</a><br><a href="mailto:541hardscaping@gmail.com">541hardscaping@gmail.com</a></p>
         </article>
       </div>
       <div class="map">
@@ -126,21 +74,17 @@
       <h2>Frequently asked questions</h2>
       <div class="faq" data-faq></div>
     </section>
-
-    <div class="sticky-cta">
-      <a class="btn btn-primary" href="#quote">Request a quote</a>
-    </div>
   </main>
   <footer>
     <div class="container footer-grid">
       <div>
-        <img src="assets/img/logo-placeholder.svg" alt="Wrenley Built" width="180" height="46" loading="lazy">
-        <p>Stonework that endures. Wrenley Built crafts long-lasting stonemasonry, paver patios, and walkways across Bend, Oregon.</p>
+        <img src="assets/img/logo-placeholder.svg" alt="541 Hardscaping" width="180" height="46" loading="lazy">
+        <p>Stonework that endures. 541 Hardscaping crafts long-lasting stonemasonry, paver patios, and walkways across Bend, Oregon.</p>
       </div>
       <div>
         <h3>Visit</h3>
         <p>123 Mockingbird Ln<br>Bend, OR 97701</p>
-        <p><a href="tel:+15415550130">(541) 555-0130</a><br><a href="mailto:hello@wrenleybuilt.com">hello@wrenleybuilt.com</a></p>
+        <p><a href="tel:+15414190092">(541) 419-0092</a><br><a href="mailto:541hardscaping@gmail.com">541hardscaping@gmail.com</a></p>
       </div>
       <div>
         <h3>Quick links</h3>
@@ -153,7 +97,7 @@
     </div>
     <div class="container footer-cta">
       <span>CCB #000000 • Bend, OR</span>
-      <a class="btn btn-primary" href="#quote">Request a quote</a>
+      <a class="btn btn-primary" href="tel:+15414190092">Call (541) 419-0092</a>
     </div>
   </footer>
   <script src="assets/js/main.js" defer></script>
