--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projects | Wrenley Built Stone & Paver Gallery</title>
-  <meta name="description" content="View Wrenley Built stonework, paver driveways, and walkway projects completed around Bend, Oregon.">
+  <title>Projects | 541 Hardscaping Stone & Paver Gallery</title>
+  <meta name="description" content="View 541 Hardscaping stonework, paver driveways, and walkway projects completed around Bend, Oregon.">
   <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="assets/css/base.css">
   <link rel="stylesheet" href="assets/css/layout.css">
   <link rel="stylesheet" href="assets/css/components.css">
-  <meta property="og:title" content="Projects | Wrenley Built">
-  <meta property="og:description" content="Filter Wrenley Built projects by masonry, pavers, walkways, steps, patios, and retaining walls.">
+  <meta property="og:title" content="Projects | 541 Hardscaping">
+  <meta property="og:description" content="Filter 541 Hardscaping projects by masonry, pavers, walkways, steps, patios, and retaining walls.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://your-username.github.io/wrenley/projects.html">
   <meta property="og:image" content="https://your-username.github.io/wrenley/assets/img/projects/2.7.jpeg">
@@ -22,10 +22,10 @@
   {
        "@context": "https://schema.org",
     "@type": "MasonryContractor",
-    "name": "Wrenley Built",
+    "name": "541 Hardscaping",
     "url": "https://your-username.github.io/wrenley/",
     "image": "https://your-username.github.io/wrenley/assets/img/projects/2.7.jpeg",
-    "telephone": "+1-541-555-0130",
+    "telephone": "+1-541-419-0092",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "123 Mockingbird Ln",
@@ -42,7 +42,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="Wrenley Built"></a>
+      <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="541 Hardscaping"></a>
       <button class="mobile-toggle" type="button" aria-label="Toggle menu" aria-expanded="false">☰</button>
       <nav aria-label="Primary">
         <a href="index.html">Home</a>
@@ -53,14 +53,14 @@
     </div>
   </header>
   <main>
-    <section class="hero hero--split hero--projects" data-hero-rotator data-parallax>
+    <section class="hero hero--split hero--projects">
       <div class="container">
         <div class="hero__copy">
-          <span class="badge">Project gallery</span>
+          <span class="badge badge--on-hero">Project gallery</span>
           <h1>See how we re-shape grade, drainage, and outdoor flow</h1>
-          <p class="hero__intro">Filter by service type to explore permeable driveways, terraced stonework, and walkable paths built for Bend's freeze/thaw cycles.</p>
+          <p class="hero__intro">Explore permeable driveways, terraced stonework, and walkable paths built for Bend's freeze/thaw cycles.</p>
           <div class="hero__actions">
-            <a class="btn btn-primary" href="contact.html#quote">Book a site consult</a>
+            <a class="btn btn-primary" href="contact.html">Book a site consult</a>
             <a class="hero__link" href="#gallery">Jump to gallery</a>
           </div>
           <ul class="hero__points">
@@ -69,38 +69,90 @@
             <li>Before / after sliders to preview transformation</li>
           </ul>
         </div>
-        <div class="hero__gallery">
-          <figure class="hero__slide is-active" data-hero-slide>
-            <img src="assets/img/projects/2.7.jpeg" alt="Basalt steps overlooking the Deschutes">
-          </figure>
-          <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway at sunset">
-          </figure>
-          <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone path with native landscaping">
-          </figure>
-        </div>
       </div>
     </section>
 
     <section class="section section--accent reveal">
       <h2>Filter the work</h2>
       <p>Use the chips below to narrow the gallery to the services you care about—driveways, retaining walls, steps, and more.</p>
-      <div id="filters" class="filters" aria-label="Project filters"></div>
+      <div id="filters" class="filters" aria-label="Project filters">
+        <button class="chip active" type="button" data-tag="All">All</button>
+        <button class="chip" type="button" data-tag="Pavers">Pavers</button>
+        <button class="chip" type="button" data-tag="Retaining Walls">Retaining Walls</button>
+        <button class="chip" type="button" data-tag="Steps">Steps</button>
+        <button class="chip" type="button" data-tag="Outdoor Living">Outdoor Living</button>
+        <button class="chip" type="button" data-tag="Landscaping">Landscaping</button>
+      </div>
     </section>
 
     <section class="container reveal">
-      <div id="gallery" class="gallery" data-source="assets/data/projects.json"></div>
+      <div id="gallery" class="gallery" data-source="assets/data/projects.json">
+        <section class="gallery__group">
+          <h3 class="gallery__group-title">Paver Installations</h3>
+          <div class="gallery__group-grid">
+            <article class="card reveal" data-tags="Pavers,Driveways">
+              <img loading="lazy" decoding="async" src="assets/img/projects/1.3.jpeg" alt="Permeable Driveway Rebuild">
+              <div class="card__body">
+                <h3>Permeable Driveway Rebuild</h3>
+                <p>Permeable pavers over engineered base for winter durability.</p>
+                <button class="btn btn-ghost" type="button" data-id="pilot-bend-drive" aria-label="Open Permeable Driveway Rebuild gallery">View</button>
+              </div>
+            </article>
+            <article class="card reveal" data-tags="Pavers,Patios,Outdoor Living">
+              <img src="assets/img/projects/6pave.jpeg" loading="lazy" decoding="async" alt="Courtyard Paver Patio">
+              <div class="card__body">
+                <h3>Courtyard Paver Patio</h3>
+                <p>Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge.</p>
+                <button class="btn btn-ghost" type="button" data-id="shevlin-paver-courtyard" aria-label="Open Courtyard Paver Patio gallery">View</button>
+              </div>
+            </article>
+          </div>
+        </section>
+        <section class="gallery__group">
+          <h3 class="gallery__group-title">Retaining Walls &amp; Steps</h3>
+          <div class="gallery__group-grid">
+            <article class="card reveal" data-tags="Steps,Masonry,Retaining Walls">
+              <img loading="lazy" decoding="async" src="assets/img/projects/2.7.jpeg" alt="Terraced Step System">
+              <div class="card__body">
+                <h3>Terraced Step System</h3>
+                <p>Basalt steps tied into a low retaining wall to manage slope transitions.</p>
+                <button class="btn btn-ghost" type="button" data-id="deschutes-steps" aria-label="Open Terraced Step System gallery">View</button>
+              </div>
+            </article>
+            <article class="card reveal" data-tags="Retaining Walls,Steps,Drainage">
+              <img src="assets/img/projects/6retain.jpeg" loading="lazy" decoding="async" alt="Tiered Block Retaining Wall">
+              <div class="card__body">
+                <h3>Tiered Block Retaining Wall</h3>
+                <p>Segmental block wall with stone steps and subsurface drainage to hold the hillside in place.</p>
+                <button class="btn btn-ghost" type="button" data-id="high-desert-retaining-wall" aria-label="Open Tiered Block Retaining Wall gallery">View</button>
+              </div>
+            </article>
+          </div>
+        </section>
+        <section class="gallery__group">
+          <h3 class="gallery__group-title">Yard &amp; Turf Installs</h3>
+          <div class="gallery__group-grid">
+            <article class="card reveal" data-tags="Landscaping,Lawns,Stonework">
+              <img src="assets/img/projects/4yard.jpeg" loading="lazy" decoding="async" alt="Backyard Lawn &amp; Stone Border">
+              <div class="card__body">
+                <h3>Backyard Lawn &amp; Stone Border</h3>
+                <p>New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery.</p>
+                <button class="btn btn-ghost" type="button" data-id="bend-backyard-refresh" aria-label="Open Backyard Lawn &amp; Stone Border gallery">View</button>
+              </div>
+            </article>
+          </div>
+        </section>
+      </div>
     </section>
 
     <section class="container reveal">
-      <h2>Case study: Pilot Butte driveway</h2>
+      <h2>Case study: Permeable paver driveway</h2>
       <div class="split">
         <div>
           <div class="before-after" data-project="pilot-bend-drive">
-            <img src="assets/img/projects/1.1.jpeg" alt="Pilot Butte driveway before" loading="lazy">
+            <img src="assets/img/projects/1.1.jpeg" alt="Driveway before construction" loading="lazy">
             <div class="before-after__after">
-              <img src="assets/img/projects/1.3.jpeg" alt="Pilot Butte driveway after" loading="lazy">
+              <img src="assets/img/projects/1.3.jpeg" alt="Driveway after permeable paver install" loading="lazy">
             </div>
             <div class="before-after__slider" aria-hidden="true">
               <div class="before-after__handle" style="left: 50%">
@@ -123,19 +175,19 @@
     <section class="container reveal">
       <h2>Need more details?</h2>
       <p>Request material samples, cost ranges, and scheduling availability for your project.</p>
-      <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
+      <a class="btn btn-primary" href="contact.html">Request a quote</a>
     </section>
   </main>
   <footer>
     <div class="container footer-grid">
       <div>
-        <img src="assets/img/logo-placeholder.svg" alt="Wrenley Built" width="180" height="46" loading="lazy">
-        <p>Stonework that endures. Wrenley Built crafts long-lasting stonemasonry, paver patios, and walkways across Bend, Oregon.</p>
+        <img src="assets/img/logo-placeholder.svg" alt="541 Hardscaping" width="180" height="46" loading="lazy">
+        <p>Stonework that endures. 541 Hardscaping crafts long-lasting stonemasonry, paver patios, and walkways across Bend, Oregon.</p>
       </div>
       <div>
         <h3>Visit</h3>
         <p>123 Mockingbird Ln<br>Bend, OR 97701</p>
-        <p><a href="tel:+15415550130">(541) 555-0130</a><br><a href="mailto:hello@wrenleybuilt.com">hello@wrenleybuilt.com</a></p>
+        <p><a href="tel:+15414190092">(541) 419-0092</a><br><a href="mailto:541hardscaping@gmail.com">541hardscaping@gmail.com</a></p>
       </div>
       <div>
         <h3>Quick links</h3>
@@ -148,57 +200,230 @@
     </div>
     <div class="container footer-cta">
       <span>CCB #000000 • Bend, OR</span>
-      <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
+      <a class="btn btn-primary" href="contact.html">Request a quote</a>
     </div>
   </footer>
   <script id="projects-data" type="application/json">
-    {
-      "projects": [
-        {
-          "id": "pilot-bend-drive",
-          "title": "Paver Driveway – Pilot Butte",
-          "tags": ["Pavers", "Driveways"],
-          "thumb": "assets/img/projects/1.3.jpeg",
-          "images": [
-            "assets/img/projects/1.1.jpeg",
-            "assets/img/projects/1.2.jpeg",
-            "assets/img/projects/1.3.jpeg"
-          ],
-          "beforeAfter": {
-            "before": "assets/img/projects/1.1.jpeg",
-            "after": "assets/img/projects/1.3.jpeg"
+  {
+    "projects": [
+      {
+        "id": "pilot-bend-drive",
+        "category": "Paver Installations",
+        "title": "Permeable Driveway Rebuild",
+        "tags": [
+          "Pavers",
+          "Driveways"
+        ],
+        "thumb": {
+          "src": "assets/img/projects/1.3.jpeg"
+        },
+        "images": [
+          {
+            "src": "assets/img/projects/1.1.jpeg"
           },
-          "summary": "Permeable pavers over engineered base for winter durability.",
-          "meta": {
-            "sqft": 900,
-            "materials": ["permeable paver", "polymeric sand"],
-            "completed": "2025-09"
+          {
+            "src": "assets/img/projects/1.2.jpeg"
+          },
+          {
+            "src": "assets/img/projects/1.3.jpeg"
+          }
+        ],
+        "beforeAfter": {
+          "before": {
+            "src": "assets/img/projects/1.1.jpeg"
+          },
+          "after": {
+            "src": "assets/img/projects/1.3.jpeg"
           }
         },
-        {
-          "id": "deschutes-steps",
-          "title": "Terraced Steps – Deschutes River Trail",
-          "tags": ["Steps", "Masonry", "Retaining Walls"],
-          "thumb": "assets/img/projects/2.7.jpeg",
-          "images": [
-            "assets/img/projects/2.1.jpeg",
-            "assets/img/projects/2.2.jpeg",
-            "assets/img/projects/2.3.jpeg",
-            "assets/img/projects/2.4.jpeg",
-            "assets/img/projects/2.4.5.jpeg",
-            "assets/img/projects/2.6.jpeg",
-            "assets/img/projects/2.7.jpeg",
-            "assets/img/projects/2.5.mp4",
-            "assets/img/projects/2.8.mp4"
+        "summary": "Permeable pavers over engineered base for winter durability.",
+        "meta": {
+          "sqft": 900,
+          "materials": [
+            "permeable paver",
+            "polymeric sand"
           ],
-          "beforeAfter": {
-            "before": "assets/img/projects/2.1.jpeg",
-            "after": "assets/img/projects/2.7.jpeg"
-          },
-          "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+          "completed": "2025-09"
         }
-      ]
-    }
+      },
+      {
+        "id": "shevlin-paver-courtyard",
+        "category": "Paver Installations",
+        "title": "Courtyard Paver Patio",
+        "tags": [
+          "Pavers",
+          "Patios",
+          "Outdoor Living"
+        ],
+        "thumb": {
+          "src": "assets/img/projects/6pave.jpeg",
+          "placeholder": "assets/img/projects/1.3.jpeg"
+        },
+        "placeholder": "assets/img/projects/1.3.jpeg",
+        "images": [
+          {
+            "src": "assets/img/projects/1pave.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2pave.jpeg"
+          },
+          {
+            "src": "assets/img/projects/3pave.jpeg"
+          },
+          {
+            "src": "assets/img/projects/4pave.jpeg"
+          },
+          {
+            "src": "assets/img/projects/5pave.jpeg"
+          },
+          {
+            "src": "assets/img/projects/6pave.jpeg"
+          },
+          {
+            "src": "assets/img/projects/7pave.jpeg"
+          }
+        ],
+        "beforeAfter": {
+          "before": {
+            "src": "assets/img/projects/1pave.jpeg"
+          },
+          "after": {
+            "src": "assets/img/projects/7pave.jpeg"
+          }
+        },
+        "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+      },
+      {
+        "id": "deschutes-steps",
+        "category": "Retaining Walls & Steps",
+        "title": "Terraced Step System",
+        "tags": [
+          "Steps",
+          "Masonry",
+          "Retaining Walls"
+        ],
+        "thumb": {
+          "src": "assets/img/projects/2.7.jpeg"
+        },
+        "images": [
+          {
+            "src": "assets/img/projects/2.1.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2.2.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2.3.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2.4.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2.4.5.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2.6.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2.7.jpeg"
+          },
+          "assets/img/projects/2.5.mp4",
+          "assets/img/projects/2.8.mp4"
+        ],
+        "beforeAfter": {
+          "before": {
+            "src": "assets/img/projects/2.1.jpeg"
+          },
+          "after": {
+            "src": "assets/img/projects/2.7.jpeg"
+          }
+        },
+        "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+      },
+      {
+        "id": "high-desert-retaining-wall",
+        "category": "Retaining Walls & Steps",
+        "title": "Tiered Block Retaining Wall",
+        "tags": [
+          "Retaining Walls",
+          "Steps",
+          "Drainage"
+        ],
+        "thumb": {
+          "src": "assets/img/projects/6retain.jpeg",
+          "placeholder": "assets/img/projects/2.7.jpeg"
+        },
+        "placeholder": "assets/img/projects/2.7.jpeg",
+        "images": [
+          {
+            "src": "assets/img/projects/1retain.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2retain.jpeg"
+          },
+          {
+            "src": "assets/img/projects/3retain.jpeg"
+          },
+          {
+            "src": "assets/img/projects/4retain.jpeg"
+          },
+          {
+            "src": "assets/img/projects/5retain.jpeg"
+          },
+          {
+            "src": "assets/img/projects/6retain.jpeg"
+          }
+        ],
+        "beforeAfter": {
+          "before": {
+            "src": "assets/img/projects/1retain.jpeg"
+          },
+          "after": {
+            "src": "assets/img/projects/6retain.jpeg"
+          }
+        },
+        "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+      },
+      {
+        "id": "bend-backyard-refresh",
+        "category": "Yard & Turf Installs",
+        "title": "Backyard Lawn & Stone Border",
+        "tags": [
+          "Landscaping",
+          "Lawns",
+          "Stonework"
+        ],
+        "thumb": {
+          "src": "assets/img/projects/4yard.jpeg",
+          "placeholder": "assets/img/projects/2.6.jpeg"
+        },
+        "placeholder": "assets/img/projects/2.6.jpeg",
+        "images": [
+          {
+            "src": "assets/img/projects/1yard.jpeg"
+          },
+          {
+            "src": "assets/img/projects/2yard.jpeg"
+          },
+          {
+            "src": "assets/img/projects/3yard.jpeg"
+          },
+          {
+            "src": "assets/img/projects/4yard.jpeg"
+          }
+        ],
+        "beforeAfter": {
+          "before": {
+            "src": "assets/img/projects/1yard.jpeg"
+          },
+          "after": {
+            "src": "assets/img/projects/4yard.jpeg"
+          }
+        },
+        "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
+      }
+    ]
+  }
   </script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/data.js" defer></script>
